test/functions/dinan/inconsistent_return_type_inferred.good
inconsistent_return_type_inferred.chpl:1: In function 'f':
inconsistent_return_type_inferred.chpl:1: error: control reaches end of function that returns a value
  inconsistent_return_type_inferred.chpl:8: called as f(x: int(64))
