test/functions/dinan/inconsistent_return_type_inferred.chpl
proc f(x) {
    if x == 0 {
        var y : int;
        return y;
    }
}

var x = f(10);
